--- a/Lesson02-GitHub-Repo-Search/T02.06-Exercise-AddPolish/app/src/main/res/values/strings.xml
+++ b/Lesson02-GitHub-Repo-Search/T02.06-Exercise-AddPolish/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
 <resources>
     <string name="app_name">Github Query</string>
     <string name="search">Search</string>
-    <!--TODO (1) Add a string stating that an error has occurred-->
+    <!--COMPLETADO (1) Add a string stating that an error has occurred-->
+    <string name="error_message">Error al obtener resultados, intentalo de nuevo.</string>
 </resources>
