--- a/Lesson04b-Webpages-Maps-and-Sharing/T04b.03-Exercise-ShareText/app/src/main/res/values/strings.xml
+++ b/Lesson04b-Webpages-Maps-and-Sharing/T04b.03-Exercise-ShareText/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
 -->
 <resources>
     <string name="app_name">Implicit Intents</string>
+    <string name="texto_compartido">Texto Compartido</string>
+    <string name="titulo_texto_compartido">Título Texto Compartido</string>
 </resources>
