--- a/Lesson06-Visualizer-Preferences/T06.10-Exercise-EditTextPreferenceConstraints/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.10-Exercise-EditTextPreferenceConstraints/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
 
     <!-- Value in SharedPreferences for green color option -->
     <string name="pref_color_green_value" translatable="false">green</string>
+    <string name="error_numero_tamanio">Error, número inválido.</string>
 
 </resources>
