--- a/Lesson07-Waitlist/T07.05-Exercise-AddGuests/app/src/main/res/values/strings.xml
+++ b/Lesson07-Waitlist/T07.05-Exercise-AddGuests/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_button_text">ADD</string>
     <string name="default_guest_name">[Guest name]</string>
     <string name="default_party_size">\?</string>
+    <string name="error_parse_tamanio_fiesta">"Error al pasar el tamaño de la fiesta: "</string>
 </resources>
